--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-dom": "$react-dom"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.22",
     "react": "19.0.0-rc-2d16326d-20240930",
-    "react-dom": "19.0.0-rc-2d16326d-20240930"
+    "react-dom": "19.0.0-rc-2d16326d-20240930",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
