--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "react-dom": "$react-dom"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.1",
     "@tailwindcss/typography": "^0.5.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.22",
     "react": "19.0.0-rc-2d16326d-20240930",
     "react-dom": "19.0.0-rc-2d16326d-20240930",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
