--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.0.0-rc-2d16326d-20240930",
     "react-dom": "19.0.0-rc-2d16326d-20240930",
     "sanity": "^3.62.3",
+    "sanity-plugin-markdown": "^5.0.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
